a little house keeping

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="main-content">
         <div class="top-nav">
-            <img id='backarrow' src="left-arrow.png" alt="">
+            <img id='backarrow' src="imagos/left-arrow.png" alt="">
             <div class="profile-name">
                 <h2 id="user-name">                              
                 </h2>
